--- a/.gitignore
+++ b/.gitignore
@@ -189,14 +189,28 @@ FakesAssemblies/
 **/Components/
 **/packages/
 
-**/*.secure*
+#----------------------------------------------
+**/*.hidden.cs
+**/*.hidden.md
+**/*.hidden.sh
+**/*.hidden.bat
+**/*.secure*.cs
+**/*.secure*.md
+**/*.secure*.sh
+**/*.secure*.bat
+**/*.secret*.cs
+**/*.secret*.md
+**/*.secret*.sh
+**/*.secret*.bat
 
-**/*.data.*
 **/*.data.bat
 **/*.data.sh
 **/*.secure.data.md
 **/*.data.md
-**/*.secure.md
+**/*.secured.md
+**/*.secured.md
+**/*.secure*
+**/*.data.*
 
 # Xamarin Studio
 **/*.userprefs
