--- a/.gitignore
+++ b/.gitignore
@@ -355,7 +355,8 @@ source/samples/Components/**
 #----------------------------------------------
 # Xamarin.Android
 # Security (project id etc)
-#**/AndroidManifest.xml
+**/AndroidManifest.xml
+**/Resource.designer.cs
 #----------------------------------------------
 
 #----------------------------------------------
