--- a/.gitignore
+++ b/.gitignore
@@ -420,3 +420,5 @@ local.properties
 lib/**
 #------------------------------------------
 #==============================================================================
+df-post.txt
+df-pre.txt
