--- a/.gitignore
+++ b/.gitignore
@@ -419,6 +419,18 @@ local.properties
 **build**
 lib/**
 #------------------------------------------
+
+#------------------------------------------
+# .net Core
+**/project.lock.json
+#------------------------------------------
+
+#------------------------------------------
+# JetBrains IntelliJ Rider IDE
+**/.idea/
+#------------------------------------------
+
+
 #==============================================================================
 df-post.txt
 df-pre.txt
